modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://shubhamtatvamasi.com/" />
     <meta property="og:image" content="https://shubhamtatvamasi.com/pic.jpg" />
     <meta property="og:description" content="It’s not a bug – it’s an undocumented feature." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Shubham Tatvamasi</title>
     <link rel="icon" href="favicon.ico">
